saas/k8s/003-data/1000-seldoncore/100-sd-quality.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: quality
  labels:
    app: quality
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  rules:
    - host: quality.data.davar.com
      http:
        paths:
          - backend:
              serviceName: quality-default
              servicePort: 8000
            path: /
  tls:
    - hosts:
        - quality.data.davar.com
      secretName: quality-production-tls
